--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </div>
 
     <script src="./js/jquery.min.js"></script>
-    <script src="./js/i5scroll.min.js"></script>
+    <script src="./js/i5scroll.js"></script>
     <script>
         $('.i35-title li').click(function () {
             $(this).addClass('active').siblings().removeClass('active');
